# fork-graphdeco-inria-on-the-fly-nvs

./: pyproject.toml  utils.py
poses/: feature_detector.py  guided_mvs.py  ransac.py
scene/: dense_extractor.py  mono_depth.py
submodules/diff-gaussian-rasterization/cuda_rasterizer/: rasterizer_impl.h
