[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otf-nvs"
version = "0.0.0"
description = "On-the-fly Reconstruction for Large-Scale Novel View Synthesis from Unposed Images"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "GRAPHDECO research group" }
]
dependencies = [
    "cupy-cuda12x",
    "diff-gaussian-rasterization",
    "fused-ssim",
    "graphdecoviewer",
    "lpips",
    "numpy",
    "opencv-python",
    "plyfile",
    "simple-knn",
    "torch",
    "tqdm",
    "websockets",
    # Depth Anything V2
    "gradio_imageslider",
    "gradio==4.29.0",
    "matplotlib",
    "opencv-python",
    "torch",
    "torchvision",
]

[tool.setuptools]
package-dir = { "otf_nvs" = ".", "depth_anything_v2" = "submodules/Depth-Anything-V2/depth_anything_v2" }
py-modules = ["args", "gaussianviewer", "train", "utils"]
packages = [
    "dataloaders",
    "poses",
    "scene",
    "webviewer",
    "otf_nvs.dataloaders",
    "otf_nvs.poses",
    "otf_nvs.scene",
    "otf_nvs.webviewer",
    "depth_anything_v2",
    "depth_anything_v2.dinov2_layers",
    "depth_anything_v2.util",
]

[tool.uv.sources]
diff-gaussian-rasterization = { path = "submodules/diff-gaussian-rasterization" }
fused-ssim = { path = "submodules/fused-ssim" }
simple-knn = { path = "submodules/simple-knn" }
graphdecoviewer = { path = "submodules/graphdecoviewer" }
